# item_finder

./: Cargo.toml  README.md
src/: lib.rs  main.rs  models.rs
src/scraping/: client.rs  error.rs  mod.rs
src/scraping/product_scraping/: infra.rs  mod.rs  stockx.rs
src/scraping/product_scraping/scrapers/: ebay.rs  mod.rs  stockx.rs
src/web/: error.rs  mod.rs
src/web/handlers/: mod.rs
src/web/handlers/api/: mod.rs  search_products.rs
src/web/handlers/views/: mod.rs  templates.rs
static/: main.css  nav.js  search.js  stopwatch.js
templates/: base.html  index.html  search.html
