[package]
name = "item_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.10.2"
askama = "0.14.0"
async-trait = "0.1.88"
derive_more = { version = "2.0.1", features = ["display", "from"] }
fantoccini = "0.21.5"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
