[package]
name = "item_finder"
version = "0.1.0"
edition = "2024"



[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.10.2"
askama = "0.14.0"
async-trait = "0.1.88"
derive_more = { version = "2.0.1", features = ["display", "from"] }
fantoccini = "0.21.5"
futures = "0.3.31"
port_check = "0.2.1"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
